--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.jcodecraeer:xrecyclerview:1.5.9'
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 
 }
 
